deployment/Infras/func/service-gateway.yaml
kind: Service
apiVersion: v1
metadata:
  name: openfaas-gateway-service
spec:
  type: ExternalName
  externalName: gateway.openfaas.svc.cluster.local
