deployment/Infras/func/ingress-func.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-func
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.compaore.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
          service:
            name: openfaas-gateway-service
            port:
              number: 8080
